# news-tui

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: bias_ratings.json  sources.yaml
docs/: SPEC.md
docs/features/: analysis.md  summarization.md
src/news_tui/: __init__.py  app.py  cli.py  pipeline.py
src/news_tui/analyze/: __init__.py  bias.py  quality.py  sensationalism.py  sentiment.py  topics.py
src/news_tui/core/: __init__.py  config.py  errors.py  types.py
src/news_tui/generate/: __init__.py  markov.py  predict.py  summarize.py
src/news_tui/ingest/: __init__.py  hn.py  lobsters.py  rss.py  sources.py
src/news_tui/track/: __init__.py  db.py  drift.py  history.py  narratives.py
src/news_tui/ui/: __init__.py  styles.py
src/news_tui/ui/screens/: __init__.py
src/news_tui/ui/widgets/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_database.py  test_pipeline.py  test_rss_parse.py
tests/unit/: __init__.py  test_markov.py  test_quality.py  test_sentiment.py  test_topics.py
